04-Bison-Reconocimiento_de_estructuras_de_frase/obj/analizador.output
Terminals unused in grammar

   '|'
   '^'
   '<'
   '>'
   '/'
   '%'


Rules useless in parser due to conflicts

   37 sentencia_list: error sentencia_list


Estado 0 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 27 conflictos: 29 reducción(ones)/reducción(ones)
Estado 36 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 39 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 51 conflictos: 29 reducción(ones)/reducción(ones)
Estado 72 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 118 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 121 conflictos: 13 desplazamiento(s)/reducción(ones)
Estado 122 conflictos: 13 desplazamiento(s)/reducción(ones)
Estado 144 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 157 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 159 conflictos: 4 desplazamiento(s)/reducción(ones)
Estado 171 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 172 conflictos: 27 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line
    3      | error line

    4 line: '\n'
    5     | TIPO_DATO declaracion
    6     | sentencia
    7     | error line

    8 sentencia: bloque_sentencias
    9          | sentencia_expresion
   10          | sentencia_bifurcacion
   11          | sentencia_bucle
   12          | sentencia_salto
   13          | sentencia_retorno
   14          | '\n'
   15          | error sentencia

   16 bloque_sentencias: '{' '}'

   17 $@1: /* vacío */

   18 bloque_sentencias: '{' '\n' declaracion_list $@1 sentencia_list '\n' '}'

   19 declaracion_list: /* vacío */

   20 $@2: /* vacío */

   21 declaracion_list: TIPO_DATO declaracion $@2 '\n' declaracion_list
   22                 | error declaracion_list

   23 declaracion: declaracion_funcion
   24            | declaracion_variables ';'

   25 declaracion_funcion: IDENTIFICADOR '(' listaParametros ')' def_dec

   26 def_dec: bloque_sentencias
   27        | ';'

   28 declaracion_variables: identVariable
   29                      | identVariable ',' declaracion_variables

   30 listaParametros: /* vacío */
   31                | TIPO_DATO IDENTIFICADOR ',' listaParametros
   32                | TIPO_DATO IDENTIFICADOR

   33 identVariable: IDENTIFICADOR
   34              | IDENTIFICADOR '=' expresion_constante

   35 sentencia_list: /* vacío */
   36               | sentencia_list sentencia
   37               | error sentencia_list

   38 sentencia_expresion: expresion ';'
   39                    | asignacion ';'

   40 expresion: expresion_logica
   41          | expresion_logica '?' expresion ':' expresion
   42          | expresion operacion_matematica expresion
   43          | llamada_funcion

   44 operacion_matematica: '-'
   45                     | '+'
   46                     | '*'
   47                     | OPERADOR_MULTIPLICATIVO

   48 expresion_logica: expresion_prefija
   49                 | expresion operacion_logica expresion

   50 operacion_logica: OPERADOR_ASIGNACION
   51                 | OPERADOR_O_LOGICO
   52                 | OPERADOR_Y_LOGICO
   53                 | OPERADOR_O_INCLUSIVO
   54                 | OPERADOR_O_EXCLUSIVO
   55                 | '&'
   56                 | OPERADOR_IGUALDAD
   57                 | OPERADOR_CORRIMIENTO
   58                 | OPERADOR_RELACIONAL

   59 expresion_prefija: expresion_postfija
   60                  | OPERADOR_SIZEOF '(' TIPO_DATO ')'
   61                  | OPERADOR_INCREMENTO expresion_prefija
   62                  | operador_unario expresion_prefija

   63 expresion_postfija: expresion_constante
   64                   | expresion_indexada
   65                   | expresion_postfija OPERADOR_INCREMENTO

   66 expresion_indexada: IDENTIFICADOR
   67                   | expresion_indexada '[' expresion ']'
   68                   | expresion_indexada '.' IDENTIFICADOR
   69                   | expresion_indexada FLECHA IDENTIFICADOR

   70 expresion_constante: CONSTANTE_CADENA
   71                    | CONSTANTE_DECIMAL
   72                    | CONSTANTE_OCTAL
   73                    | CONSTANTE_HEXADECIMAL
   74                    | CONSTANTE_CARACTER
   75                    | CONSTANTE_REAL
   76                    | '(' expresion ')'

   77 asignacion: expresion_indexada operador_asignacion expresion

   78 operador_asignacion: '='
   79                    | OPERADOR_ASIGNACION

   80 sentencia_bifurcacion: IF '(' expresion ')' bloque_sentencias
   81                      | IF '(' expresion ')' bloque_sentencias ELSE bloque_sentencias
   82                      | SWITCH '(' expresion ')' '{' sentencia_caso_list '}'

   83 sentencia_caso_list: /* vacío */
   84                    | sentencia_caso sentencia_caso_list

   85 sentencia_caso: CASE expresion ':' sentencia
   86               | DEFAULT ':' sentencia

   87 sentencia_bucle: WHILE '(' expresion ')' bloque_sentencias
   88                | DO bloque_sentencias WHILE '(' expresion ')' ';'
   89                | FOR '(' lista_asignaciones ';' expresion ';' expresion ')' bloque_sentencias

   90 lista_asignaciones: asignacion
   91                   | asignacion ',' lista_asignaciones

   92 sentencia_salto: CONTINUE ';'
   93                | BREAK ';'

   94 sentencia_retorno: RETURN ';'
   95                  | RETURN expresion ';'

   96 operador_unario: '&'
   97                | '*'
   98                | '+'
   99                | '-'
  100                | '~'
  101                | '!'

  102 llamada_funcion: IDENTIFICADOR '(' parametros ')'

  103 parametros: /* vacío */
  104           | parametro
  105           | parametro ',' parametros

  106 parametro: expresion_indexada
  107          | expresion_constante


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 4 14 18 21
'!' (33) 101
'%' (37)
'&' (38) 55 96
'(' (40) 25 60 76 80 81 82 87 88 89 102
')' (41) 25 60 76 80 81 82 87 88 89 102
'*' (42) 46 97
'+' (43) 45 98
',' (44) 29 31 91 105
'-' (45) 44 99
'.' (46) 68
'/' (47)
':' (58) 41 85 86
';' (59) 24 27 38 39 88 89 92 93 94 95
'<' (60)
'=' (61) 34 78
'>' (62)
'?' (63) 41
'[' (91) 67
']' (93) 67
'^' (94)
'{' (123) 16 18 82
'|' (124)
'}' (125) 16 18 82
'~' (126) 100
error (256) 3 7 15 22 37
IF (258) 80 81
ELSE (259) 81
SWITCH (260) 82
WHILE (261) 87 88
DO (262) 88
FOR (263) 89
CASE (264) 85
DEFAULT (265) 86
CONTINUE (266) 92
BREAK (267) 93
RETURN (268) 94 95
TIPO_DATO (269) 5 21 31 32 60
OPERADOR_ASIGNACION (270) 50 79
OPERADOR_O_LOGICO (271) 51
OPERADOR_Y_LOGICO (272) 52
OPERADOR_O_INCLUSIVO (273) 53
OPERADOR_O_EXCLUSIVO (274) 54
OPERADOR_IGUALDAD (275) 56
OPERADOR_RELACIONAL (276) 58
OPERADOR_CORRIMIENTO (277) 57
OPERADOR_MULTIPLICATIVO (278) 47
OPERADOR_INCREMENTO (279) 61 65
OPERADOR_SIZEOF (280) 60
FLECHA (281) 69
IDENTIFICADOR (282) 25 31 32 33 34 66 68 69 102
CONSTANTE_CADENA (283) 70
CONSTANTE_DECIMAL (284) 71
CONSTANTE_OCTAL (285) 72
CONSTANTE_HEXADECIMAL (286) 73
CONSTANTE_CARACTER (287) 74
CONSTANTE_REAL (288) 75


No terminales con las reglas donde aparecen

$accept (59)
    en la izquierda: 0
input (60)
    en la izquierda: 1 2 3, en la derecha: 0 2
line (61)
    en la izquierda: 4 5 6 7, en la derecha: 2 3 7
sentencia (62)
    en la izquierda: 8 9 10 11 12 13 14 15, en la derecha: 6 15 36
    85 86
bloque_sentencias (63)
    en la izquierda: 16 18, en la derecha: 8 26 80 81 87 88 89
$@1 (64)
    en la izquierda: 17, en la derecha: 18
declaracion_list (65)
    en la izquierda: 19 21 22, en la derecha: 18 21 22
$@2 (66)
    en la izquierda: 20, en la derecha: 21
declaracion (67)
    en la izquierda: 23 24, en la derecha: 5 21
declaracion_funcion (68)
    en la izquierda: 25, en la derecha: 23
def_dec (69)
    en la izquierda: 26 27, en la derecha: 25
declaracion_variables (70)
    en la izquierda: 28 29, en la derecha: 24 29
listaParametros (71)
    en la izquierda: 30 31 32, en la derecha: 25 31
identVariable (72)
    en la izquierda: 33 34, en la derecha: 28 29
sentencia_list (73)
    en la izquierda: 35 36 37, en la derecha: 18 36 37
sentencia_expresion (74)
    en la izquierda: 38 39, en la derecha: 9
expresion (75)
    en la izquierda: 40 41 42 43, en la derecha: 38 41 42 49 67 76
    77 80 81 82 85 87 88 89 95
operacion_matematica (76)
    en la izquierda: 44 45 46 47, en la derecha: 42
expresion_logica (77)
    en la izquierda: 48 49, en la derecha: 40 41
operacion_logica (78)
    en la izquierda: 50 51 52 53 54 55 56 57 58, en la derecha: 49
expresion_prefija (79)
    en la izquierda: 59 60 61 62, en la derecha: 48 61 62
expresion_postfija (80)
    en la izquierda: 63 64 65, en la derecha: 59 65
expresion_indexada (81)
    en la izquierda: 66 67 68 69, en la derecha: 64 67 68 69 77 106
expresion_constante (82)
    en la izquierda: 70 71 72 73 74 75 76, en la derecha: 34 63 107
asignacion (83)
    en la izquierda: 77, en la derecha: 39 90 91
operador_asignacion (84)
    en la izquierda: 78 79, en la derecha: 77
sentencia_bifurcacion (85)
    en la izquierda: 80 81 82, en la derecha: 10
sentencia_caso_list (86)
    en la izquierda: 83 84, en la derecha: 82 84
sentencia_caso (87)
    en la izquierda: 85 86, en la derecha: 84
sentencia_bucle (88)
    en la izquierda: 87 88 89, en la derecha: 11
lista_asignaciones (89)
    en la izquierda: 90 91, en la derecha: 89 91
sentencia_salto (90)
    en la izquierda: 92 93, en la derecha: 12
sentencia_retorno (91)
    en la izquierda: 94 95, en la derecha: 13
operador_unario (92)
    en la izquierda: 96 97 98 99 100 101, en la derecha: 62
llamada_funcion (93)
    en la izquierda: 102, en la derecha: 43
parametros (94)
    en la izquierda: 103 104 105, en la derecha: 102 105
parametro (95)
    en la izquierda: 106 107, en la derecha: 104 105


estado 0

    0 $accept: . input $end

    error  desplazar e ir al estado 1

    $end                   reduce usando la regla 1 (input)
    error                  [reduce usando la regla 1 (input)]
    IF                     reduce usando la regla 1 (input)
    SWITCH                 reduce usando la regla 1 (input)
    WHILE                  reduce usando la regla 1 (input)
    DO                     reduce usando la regla 1 (input)
    FOR                    reduce usando la regla 1 (input)
    CONTINUE               reduce usando la regla 1 (input)
    BREAK                  reduce usando la regla 1 (input)
    RETURN                 reduce usando la regla 1 (input)
    TIPO_DATO              reduce usando la regla 1 (input)
    OPERADOR_INCREMENTO    reduce usando la regla 1 (input)
    OPERADOR_SIZEOF        reduce usando la regla 1 (input)
    IDENTIFICADOR          reduce usando la regla 1 (input)
    CONSTANTE_CADENA       reduce usando la regla 1 (input)
    CONSTANTE_DECIMAL      reduce usando la regla 1 (input)
    CONSTANTE_OCTAL        reduce usando la regla 1 (input)
    CONSTANTE_HEXADECIMAL  reduce usando la regla 1 (input)
    CONSTANTE_CARACTER     reduce usando la regla 1 (input)
    CONSTANTE_REAL         reduce usando la regla 1 (input)
    '&'                    reduce usando la regla 1 (input)
    '-'                    reduce usando la regla 1 (input)
    '+'                    reduce usando la regla 1 (input)
    '*'                    reduce usando la regla 1 (input)
    '('                    reduce usando la regla 1 (input)
    '\n'                   reduce usando la regla 1 (input)
    '{'                    reduce usando la regla 1 (input)
    '~'                    reduce usando la regla 1 (input)
    '!'                    reduce usando la regla 1 (input)

    input  ir al estado 2


estado 1

    3 input: error . line

    error                  desplazar e ir al estado 3
    IF                     desplazar e ir al estado 4
    SWITCH                 desplazar e ir al estado 5
    WHILE                  desplazar e ir al estado 6
    DO                     desplazar e ir al estado 7
    FOR                    desplazar e ir al estado 8
    CONTINUE               desplazar e ir al estado 9
    BREAK                  desplazar e ir al estado 10
    RETURN                 desplazar e ir al estado 11
    TIPO_DATO              desplazar e ir al estado 12
    OPERADOR_INCREMENTO    desplazar e ir al estado 13
    OPERADOR_SIZEOF        desplazar e ir al estado 14
    IDENTIFICADOR          desplazar e ir al estado 15
    CONSTANTE_CADENA       desplazar e ir al estado 16
    CONSTANTE_DECIMAL      desplazar e ir al estado 17
    CONSTANTE_OCTAL        desplazar e ir al estado 18
    CONSTANTE_HEXADECIMAL  desplazar e ir al estado 19
    CONSTANTE_CARACTER     desplazar e ir al estado 20
    CONSTANTE_REAL         desplazar e ir al estado 21
    '&'                    desplazar e ir al estado 22
    '-'                    desplazar e ir al estado 23
    '+'                    desplazar e ir al estado 24
    '*'                    desplazar e ir al estado 25
    '('                    desplazar e ir al estado 26
    '\n'                   desplazar e ir al estado 27
    '{'                    desplazar e ir al estado 28
    '~'                    desplazar e ir al estado 29
    '!'                    desplazar e ir al estado 30

    line                   ir al estado 31
    sentencia              ir al estado 32
    bloque_sentencias      ir al estado 33
    sentencia_expresion    ir al estado 34
    expresion              ir al estado 35
    expresion_logica       ir al estado 36
    expresion_prefija      ir al estado 37
    expresion_postfija     ir al estado 38
    expresion_indexada     ir al estado 39
    expresion_constante    ir al estado 40
    asignacion             ir al estado 41
    sentencia_bifurcacion  ir al estado 42
    sentencia_bucle        ir al estado 43
    sentencia_salto        ir al estado 44
    sentencia_retorno      ir al estado 45
    operador_unario        ir al estado 46
    llamada_funcion        ir al estado 47


estado 2

    0 $accept: input . $end
    2 input: input . line

    $end                   desplazar e ir al estado 48
    error                  desplazar e ir al estado 3
    IF                     desplazar e ir al estado 4
    SWITCH                 desplazar e ir al estado 5
    WHILE                  desplazar e ir al estado 6
    DO                     desplazar e ir al estado 7
    FOR                    desplazar e ir al estado 8
    CONTINUE               desplazar e ir al estado 9
    BREAK                  desplazar e ir al estado 10
    RETURN                 desplazar e ir al estado 11
    TIPO_DATO              desplazar e ir al estado 12
    OPERADOR_INCREMENTO    desplazar e ir al estado 13
    OPERADOR_SIZEOF        desplazar e ir al estado 14
    IDENTIFICADOR          desplazar e ir al estado 15
    CONSTANTE_CADENA       desplazar e ir al estado 16
    CONSTANTE_DECIMAL      desplazar e ir al estado 17
    CONSTANTE_OCTAL        desplazar e ir al estado 18
    CONSTANTE_HEXADECIMAL  desplazar e ir al estado 19
    CONSTANTE_CARACTER     desplazar e ir al estado 20
    CONSTANTE_REAL         desplazar e ir al estado 21
    '&'                    desplazar e ir al estado 22
    '-'                    desplazar e ir al estado 23
    '+'                    desplazar e ir al estado 24
    '*'                    desplazar e ir al estado 25
    '('                    desplazar e ir al estado 26
    '\n'                   desplazar e ir al estado 27
    '{'                    desplazar e ir al estado 28
    '~'                    desplazar e ir al estado 29
    '!'                    desplazar e ir al estado 30

    line                   ir al estado 49
    sentencia              ir al estado 32
    bloque_sentencias      ir al estado 33
    sentencia_expresion    ir al estado 34
    expresion              ir al estado 35
    expresion_logica       ir al estado 36
    expresion_prefija      ir al estado 37
    expresion_postfija     ir al estado 38
    expresion_indexada     ir al estado 39
    expresion_constante    ir al estado 40
    asignacion             ir al estado 41
    sentencia_bifurcacion  ir al estado 42
    sentencia_bucle        ir al estado 43
    sentencia_salto        ir al estado 44
    sentencia_retorno      ir al estado 45
    operador_unario        ir al estado 46
    llamada_funcion        ir al estado 47


estado 3

    7 line: error . line
   15 sentencia: error . sentencia

    error                  desplazar e ir al estado 3
    IF                     desplazar e ir al estado 4
    SWITCH                 desplazar e ir al estado 5
    WHILE                  desplazar e ir al estado 6
    DO                     desplazar e ir al estado 7
    FOR                    desplazar e ir al estado 8
    CONTINUE               desplazar e ir al estado 9
    BREAK                  desplazar e ir al estado 10
    RETURN                 desplazar e ir al estado 11
    TIPO_DATO              desplazar e ir al estado 12
    OPERADOR_INCREMENTO    desplazar e ir al estado 13
    OPERADOR_SIZEOF        desplazar e ir al estado 14
    IDENTIFICADOR          desplazar e ir al estado 15
    CONSTANTE_CADENA       desplazar e ir al estado 16
    CONSTANTE_DECIMAL      desplazar e ir al estado 17
    CONSTANTE_OCTAL        desplazar e ir al estado 18
    CONSTANTE_HEXADECIMAL  desplazar e ir al estado 19
    CONSTANTE_CARACTER     desplazar e ir al estado 20
    CONSTANTE_REAL         desplazar e ir al estado 21
    '&'                    desplazar e ir al estado 22
    '-'                    desplazar e ir al estado 23
    '+'                    desplazar e ir al estado 24
    '*'                    desplazar e ir al estado 25
    '('                    desplazar e ir al estado 26
    '\n'                   desplazar e ir al estado 27
    '{'                    desplazar e ir al estado 28
    '~'                    desplazar e ir al estado 29
    '!'                    desplazar e ir al estado 30

    line                   ir al estado 50
    sentencia              ir al estado 51
    bloque_sentencias      ir al estado 33
    sentencia_expresion    ir al estado 34
    expresion              ir al estado 35
    expresion_logica       ir al estado 36
    expresion_prefija      ir al estado 37
    expresion_postfija     ir al estado 38
    expresion_indexada     ir al estado 39
    expresion_constante    ir al estado 40
    asignacion             ir al estado 41
    sentencia_bifurcacion  ir al estado 42
    sentencia_bucle        ir al estado 43
    sentencia_salto        ir al estado 44
    sentencia_retorno      ir al estado 45
    operador_unario        ir al estado 46
    llamada_funcion        ir al estado 47


estado 4

   80 sentencia_bifurcacion: IF . '(' expresion ')' bloque_sentencias
   81                      | IF . '(' expresion ')' bloque_sentencias ELSE bloque_sentencias

    '('  desplazar e ir al estado 52


estado 5

   82 sentencia_bifurcacion: SWITCH . '(' expresion ')' '{' sentencia_caso_list '}'

    '('  desplazar e ir al estado 53


estado 6

   87 sentencia_bucle: WHILE . '(' expresion ')' bloque_sentencias

    '('  desplazar e ir al estado 54


estado 7

   88 sentencia_bucle: DO . bloque_sentencias WHILE '(' expresion ')' ';'

    '{'  desplazar e ir al estado 28

    bloque_sentencias  ir al estado 55


estado 8

   89 sentencia_bucle: FOR . '(' lista_asignaciones ';' expresion ';' expresion ')' bloque_sentencias

    '('  desplazar e ir al estado 56


estado 9

   92 sentencia_salto: CONTINUE . ';'

    ';'  desplazar e ir al estado 57


estado 10

   93 sentencia_salto: BREAK . ';'

    ';'  desplazar e ir al estado 58


estado 11

   94 sentencia_retorno: RETURN . ';'
   95                  | RETURN . expresion ';'

    OPERADOR_INCREMENTO    desplazar e ir al estado 13
    OPERADOR_SIZEOF        desplazar e ir al estado 14
    IDENTIFICADOR          desplazar e ir al estado 15
    CONSTANTE_CADENA       desplazar e ir al estado 16
    CONSTANTE_DECIMAL      desplazar e ir al estado 17
    CONSTANTE_OCTAL        desplazar e ir al estado 18
    CONSTANTE_HEXADECIMAL  desplazar e ir al estado 19
    CONSTANTE_CARACTER     desplazar e ir al estado 20
    CONSTANTE_REAL         desplazar e ir al estado 21
    '&'                    desplazar e ir al estado 22
    '-'                    desplazar e ir al estado 23
    '+'                    desplazar e ir al estado 24
    '*'                    desplazar e ir al estado 25
    '('                    desplazar e ir al estado 26
    ';'                    desplazar e ir al estado 59
    '~'                    desplazar e ir al estado 29
    '!'                    desplazar e ir al estado 30

    expresion            ir al estado 60
    expresion_logica     ir al estado 36
    expresion_prefija    ir al estado 37
    expresion_postfija   ir al estado 38
    expresion_indexada   ir al estado 61
    expresion_constante  ir al estado 40
    operador_unario      ir al estado 46
    llamada_funcion      ir al estado 47


estado 12

    5 line: TIPO_DATO . declaracion

    IDENTIFICADOR  desplazar e ir al estado 62

    declaracion            ir al estado 63
    declaracion_funcion    ir al estado 64
    declaracion_variables  ir al estado 65
    identVariable          ir al estado 66


estado 13

   61 expresion_prefija: OPERADOR_INCREMENTO . expresion_prefija

    OPERADOR_INCREMENTO    desplazar e ir al estado 13
    OPERADOR_SIZEOF        desplazar e ir al estado 14
    IDENTIFICADOR          desplazar e ir al estado 67
    CONSTANTE_CADENA       desplazar e ir al estado 16
    CONSTANTE_DECIMAL      desplazar e ir al estado 17
    CONSTANTE_OCTAL        desplazar e ir al estado 18
    CONSTANTE_HEXADECIMAL  desplazar e ir al estado 19
    CONSTANTE_CARACTER     desplazar e ir al estado 20
    CONSTANTE_REAL         desplazar e ir al estado 21
    '&'                    desplazar e ir al estado 22
    '-'                    desplazar e ir al estado 23
    '+'                    desplazar e ir al estado 24
    '*'                    desplazar e ir al estado 25
    '('                    desplazar e ir al estado 26
    '~'                    desplazar e ir al estado 29
    '!'                    desplazar e ir al estado 30

    expresion_prefija    ir al estado 68
    expresion_postfija   ir al estado 38
    expresion_indexada   ir al estado 61
    expresion_constante  ir al estado 40
    operador_unario      ir al estado 46


estado 14

   60 expresion_prefija: OPERADOR_SIZEOF . '(' TIPO_DATO ')'

    '('  desplazar e ir al estado 69


estado 15

   66 expresion_indexada: IDENTIFICADOR .
  102 llamada_funcion: IDENTIFICADOR . '(' parametros ')'

    '('  desplazar e ir al estado 70

    $default  reduce usando la regla 66 (expresion_indexada)


estado 16

   70 expresion_constante: CONSTANTE_CADENA .

    $default  reduce usando la regla 70 (expresion_constante)


estado 17

   71 expresion_constante: CONSTANTE_DECIMAL .

    $default  reduce usando la regla 71 (expresion_constante)


estado 18

   72 expresion_constante: CONSTANTE_OCTAL .

    $default  reduce usando la regla 72 (expresion_constante)


estado 19

   73 expresion_constante: CONSTANTE_HEXADECIMAL .

    $default  reduce usando la regla 73 (expresion_constante)


estado 20

   74 expresion_constante: CONSTANTE_CARACTER .

    $default  reduce usando la regla 74 (expresion_constante)


estado 21

   75 expresion_constante: CONSTANTE_REAL .

    $default  reduce usando la regla 75 (expresion_constante)


estado 22

   96 operador_unario: '&' .

    $default  reduce usando la regla 96 (operador_unario)


estado 23

   99 operador_unario: '-' .

    $default  reduce usando la regla 99 (operador_unario)


estado 24

   98 operador_unario: '+' .

    $default  reduce usando la regla 98 (operador_unario)


estado 25

   97 operador_unario: '*' .

    $default  reduce usando la regla 97 (operador_unario)


estado 26

   76 expresion_constante: '(' . expresion ')'

    OPERADOR_INCREMENTO    desplazar e ir al estado 13
    OPERADOR_SIZEOF        desplazar e ir al estado 14
    IDENTIFICADOR          desplazar e ir al estado 15
    CONSTANTE_CADENA       desplazar e ir al estado 16
    CONSTANTE_DECIMAL      desplazar e ir al estado 17
    CONSTANTE_OCTAL        desplazar e ir al estado 18
    CONSTANTE_HEXADECIMAL  desplazar e ir al estado 19
    CONSTANTE_CARACTER     desplazar e ir al estado 20
    CONSTANTE_REAL         desplazar e ir al estado 21
    '&'                    desplazar e ir al estado 22
    '-'                    desplazar e ir al estado 23
    '+'                    desplazar e ir al estado 24
    '*'                    desplazar e ir al estado 25
    '('                    desplazar e ir al estado 26
    '~'                    desplazar e ir al estado 29
    '!'                    desplazar e ir al estado 30

    expresion            ir al estado 71
    expresion_logica     ir al estado 36
    expresion_prefija    ir al estado 37
    expresion_postfija   ir al estado 38
    expresion_indexada   ir al estado 61
    expresion_constante  ir al estado 40
    operador_unario      ir al estado 46
    llamada_funcion      ir al estado 47


estado 27

    4 line: '\n' .
   14 sentencia: '\n' .

    $end                   reduce usando la regla 4 (line)
    $end                   [reduce usando la regla 14 (sentencia)]
    error                  reduce usando la regla 4 (line)
    error                  [reduce usando la regla 14 (sentencia)]
    IF                     reduce usando la regla 4 (line)
    IF                     [reduce usando la regla 14 (sentencia)]
    SWITCH                 reduce usando la regla 4 (line)
    SWITCH                 [reduce usando la regla 14 (sentencia)]
    WHILE                  reduce usando la regla 4 (line)
    WHILE                  [reduce usando la regla 14 (sentencia)]
    DO                     reduce usando la regla 4 (line)
    DO                     [reduce usando la regla 14 (sentencia)]
    FOR                    reduce usando la regla 4 (line)
    FOR                    [reduce usando la regla 14 (sentencia)]
    CONTINUE               reduce usando la regla 4 (line)
    CONTINUE               [reduce usando la regla 14 (sentencia)]
    BREAK                  reduce usando la regla 4 (line)
    BREAK                  [reduce usando la regla 14 (sentencia)]
    RETURN                 reduce usando la regla 4 (line)
    RETURN                 [reduce usando la regla 14 (sentencia)]
    TIPO_DATO              reduce usando la regla 4 (line)
    TIPO_DATO              [reduce usando la regla 14 (sentencia)]
    OPERADOR_INCREMENTO    reduce usando la regla 4 (line)
    OPERADOR_INCREMENTO    [reduce usando la regla 14 (sentencia)]
    OPERADOR_SIZEOF        reduce usando la regla 4 (line)
    OPERADOR_SIZEOF        [reduce usando la regla 14 (sentencia)]
    IDENTIFICADOR          reduce usando la regla 4 (line)
    IDENTIFICADOR          [reduce usando la regla 14 (sentencia)]
    CONSTANTE_CADENA       reduce usando la regla 4 (line)
    CONSTANTE_CADENA       [reduce usando la regla 14 (sentencia)]
    CONSTANTE_DECIMAL      reduce usando la regla 4 (line)
    CONSTANTE_DECIMAL      [reduce usando la regla 14 (sentencia)]
    CONSTANTE_OCTAL        reduce usando la regla 4 (line)
    CONSTANTE_OCTAL        [reduce usando la regla 14 (sentencia)]
    CONSTANTE_HEXADECIMAL  reduce usando la regla 4 (line)
    CONSTANTE_HEXADECIMAL  [reduce usando la regla 14 (sentencia)]
    CONSTANTE_CARACTER     reduce usando la regla 4 (line)
    CONSTANTE_CARACTER     [reduce usando la regla 14 (sentencia)]
    CONSTANTE_REAL         reduce usando la regla 4 (line)
    CONSTANTE_REAL         [reduce usando la regla 14 (sentencia)]
    '&'                    reduce usando la regla 4 (line)
    '&'                    [reduce usando la regla 14 (sentencia)]
    '-'                    reduce usando la regla 4 (line)
    '-'                    [reduce usando la regla 14 (sentencia)]
    '+'                    reduce usando la regla 4 (line)
    '+'                    [reduce usando la regla 14 (sentencia)]
    '*'                    reduce usando la regla 4 (line)
    '*'                    [reduce usando la regla 14 (sentencia)]
    '('                    reduce usando la regla 4 (line)
    '('                    [reduce usando la regla 14 (sentencia)]
    '\n'                   reduce usando la regla 4 (line)
    '\n'                   [reduce usando la regla 14 (sentencia)]
    '{'                    reduce usando la regla 4 (line)
    '{'                    [reduce usando la regla 14 (sentencia)]
    '~'                    reduce usando la regla 4 (line)
    '~'                    [reduce usando la regla 14 (sentencia)]
    '!'                    reduce usando la regla 4 (line)
    '!'                    [reduce usando la regla 14 (sentencia)]
    $default               reduce usando la regla 4 (line)


estado 28

   16 bloque_sentencias: '{' . '}'
   18                  | '{' . '\n' declaracion_list $@1 sentencia_list '\n' '}'

    '\n'  desplazar e ir al estado 72
    '}'   desplazar e ir al estado 73


estado 29

  100 operador_unario: '~' .

    $default  reduce usando la regla 100 (operador_unario)


estado 30

  101 operador_unario: '!' .

    $default  reduce usando la regla 101 (operador_unario)


estado 31

    3 input: error line .

    $default  reduce usando la regla 3 (input)


estado 32

    6 line: sentencia .

    $default  reduce usando la regla 6 (line)


estado 33

    8 sentencia: bloque_sentencias .

    $default  reduce usando la regla 8 (sentencia)


estado 34

    9 sentencia: sentencia_expresion .

    $default  reduce usando la regla 9 (sentencia)


estado 35

   38 sentencia_expresion: expresion . ';'
   42 expresion: expresion . operacion_matematica expresion
   49 expresion_logica: expresion . operacion_logica expresion

    OPERADOR_ASIGNACION      desplazar e ir al estado 74
    OPERADOR_O_LOGICO        desplazar e ir al estado 75
    OPERADOR_Y_LOGICO        desplazar e ir al estado 76
    OPERADOR_O_INCLUSIVO     desplazar e ir al estado 77
    OPERADOR_O_EXCLUSIVO     desplazar e ir al estado 78
    OPERADOR_IGUALDAD        desplazar e ir al estado 79
    OPERADOR_RELACIONAL      desplazar e ir al estado 80
    OPERADOR_CORRIMIENTO     desplazar e ir al estado 81
    OPERADOR_MULTIPLICATIVO  desplazar e ir al estado 82
    '&'                      desplazar e ir al estado 83
    '-'                      desplazar e ir al estado 84
    '+'                      desplazar e ir al estado 85
    '*'                      desplazar e ir al estado 86
    ';'                      desplazar e ir al estado 87

    operacion_matematica  ir al estado 88
    operacion_logica      ir al estado 89


estado 36

   40 expresion: expresion_logica .
   41          | expresion_logica . '?' expresion ':' expresion

    '?'  desplazar e ir al estado 90

    '?'       [reduce usando la regla 40 (expresion)]
    $default  reduce usando la regla 40 (expresion)


estado 37

   48 expresion_logica: expresion_prefija .

    $default  reduce usando la regla 48 (expresion_logica)


estado 38

   59 expresion_prefija: expresion_postfija .
   65 expresion_postfija: expresion_postfija . OPERADOR_INCREMENTO

    OPERADOR_INCREMENTO  desplazar e ir al estado 91

    $default  reduce usando la regla 59 (expresion_prefija)


estado 39

   64 expresion_postfija: expresion_indexada .
   67 expresion_indexada: expresion_indexada . '[' expresion ']'
   68                   | expresion_indexada . '.' IDENTIFICADOR
   69                   | expresion_indexada . FLECHA IDENTIFICADOR
   77 asignacion: expresion_indexada . operador_asignacion expresion

    OPERADOR_ASIGNACION  desplazar e ir al estado 92
    FLECHA               desplazar e ir al estado 93
    '='                  desplazar e ir al estado 94
    '['                  desplazar e ir al estado 95
    '.'                  desplazar e ir al estado 96

    OPERADOR_ASIGNACION  [reduce usando la regla 64 (expresion_postfija)]
    $default             reduce usando la regla 64 (expresion_postfija)

    operador_asignacion  ir al estado 97


estado 40

   63 expresion_postfija: expresion_constante .

    $default  reduce usando la regla 63 (expresion_postfija)


estado 41

   39 sentencia_expresion: asignacion . ';'

    ';'  desplazar e ir al estado 98


estado 42

   10 sentencia: sentencia_bifurcacion .

    $default  reduce usando la regla 10 (sentencia)


estado 43

   11 sentencia: sentencia_bucle .

    $default  reduce usando la regla 11 (sentencia)


estado 44

   12 sentencia: sentencia_salto .

    $default  reduce usando la regla 12 (sentencia)


estado 45

   13 sentencia: sentencia_retorno .

    $default  reduce usando la regla 13 (sentencia)


estado 46

   62 expresion_prefija: operador_unario . expresion_prefija
